adjusted footer for mobile, and added home to header, adjustinging toggle nav, started SS case study page

--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
 <body class="about">
     <header class="site-header toggle-nav animated">
         <div class="site-id">
-            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="65" height="65"></a></h1>
+            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
         </div>
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
-                <li class="hidden"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="works.html">Works</a></li>
             </ul>
@@ -139,7 +139,7 @@
     <footer class="site-footer">
         <div class="container">
             <div class="row">
-                <div class="column col-1 push-1">
+                <div class="column col-2">
                     <div class="footer-logo">
                         <a href="index.html"><img src="img/lam_logo.png" alt="lamb logo"></a>
                     </div>
@@ -156,13 +156,13 @@
                 <div class="column col-2 push-5">
                     <h3><span class="chinese">加油~</span></h3>
                     <div class="link-icons">
-                        <p><a href="mailto:katheren@hawaii.edu"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
+                        <p><a class="mail" href="mailto:katheren@hawaii.edu"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
 
-                        <a href="https://www.instagram.com/takyyttik/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
+                        <a class="instagram" href="https://www.instagram.com/takyyttik/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
                     </div>
                 </div>
                 <div class="column col-1 push-8 rotate-vert-n">
-                    <h5 class="rotate-vert">MY PROJECTS</h5>
+                    <h5><a href="works.html">MY PROJECTS</a></h5>
                 </div>
                 <div class="column col-2 push-9 no-deco">
                     <ul>
