--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <body class="home-page">
     <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
-            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="65" height="65"></a></h1>
+            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
         </div>
 
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
-                <li class="hidden"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="works.html">Works</a></li>
             </ul>
@@ -43,7 +43,12 @@
         
         <section class="hero">
             <div class="container">
-                <h1><i>Katheren's Studio</i></h1>
+                <!-- <h1><i>From mind to matter</i></h1>
+                <h2 class="text-centered"><i>Design together</i></h2> -->
+                <h1><i>Design Together</i></h1>
+                    <p><a class="button" href="works.html">Creations</a>
+                    <a href="about.html" class="button">The Designer</a>
+                </p>        
             </div>
         </section>
 
@@ -71,19 +76,19 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="one-fourth column oneone-img">
-                        <a href="flowerknows.html"><img src="img/flowerknows_display.png" alt="flower knows logo redesign"></a>
-                        
+                    <div class="one-fourth column oneone-img"><a href="fraufeuer.html"><img src="img/fraufeuer_sage.jpg" alt="frau feuer branding design"></a>
                     </div>
-                    <div class="one-fourth column oneone-img">
-                        <img src="img/ohwhaledotco_display.png" alt="ohwhale.co website redesign">
+
+                    <div class="one-fourth column oneone-img"><a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Fictional pop group, Second Star, album design"></a>
                     </div>
+
                     <div class="one-fourth column oneone-img">
-                        <img src="img/kk_logo.png" alt="welcome to kawaii kon visual essay">
+                    <a href="flowerknows.html"><img src="img/flowerknows_box_mockup.png" alt="flower knows logo redesign"></a>
                     </div>
-                    <div class="one-fourth column oneone-img">
-                        <img src="img/cologne_display.png" alt="colone germany toursm logo design">
+
+                    <div class="one-fourth column oneone-img"><a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhale.co website redesign"></a>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -94,7 +99,7 @@
     <footer class="site-footer">
         <div class="container">
             <div class="row">
-                <div class="column col-1 push-1">
+                <div class="column col-2">
                     <div class="footer-logo">
                         <a href="index.html"><img src="img/lam_logo.png" alt="lamb logo"></a>
                     </div>
@@ -117,7 +122,7 @@
                     </div>
                 </div>
                 <div class="column col-1 push-8 rotate-vert-n">
-                    <h5 class="rotate-vert"><a href="works.html">MY PROJECTS</a></h5>
+                    <h5><a href="works.html">MY PROJECTS</a></h5>
                 </div>
                 <div class="column col-2 push-9 no-deco">
                     <ul>
