--- a/fraufeuer.html
+++ b/fraufeuer.html
@@ -26,12 +26,12 @@
 <body class="case-study-card">
     <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
-            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="65" height="65"></a></h1>
+            <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
         </div>
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
-                <li class="hidden"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="works.html">Works</a></li>
             </ul>
@@ -97,7 +97,7 @@
     <footer class="site-footer">
         <div class="container">
             <div class="row">
-                <div class="column col-1 push-1">
+                <div class="column col-2">
                     <div class="footer-logo">
                         <a href="index.html"><img src="img/lam_logo.png" alt="lamb logo"></a>
                     </div>
