added ohwhaleco case study and fixed header issues on mobile

--- a/about.html
+++ b/about.html
@@ -78,9 +78,17 @@
                         </ul>
                     </div>
             </section>
+        </div>
 
-            <section>
-                <div class="row no-deco">
+        <section class="about-animation">
+            <div>
+                <video src="img/about_create.mp4" autoplay muted width="1520"></video>
+            </div>
+        </section>
+
+        <section class="resume">
+            <div class="container">
+                <div class="row no-deco ">
                     <div class="one-third column">
                         <h3>Education</h3>
                         <ul>
@@ -131,8 +139,8 @@
                     </div>
 
                 </div>
-            </section>
-        </div>        
+            </div>
+        </section>     
         <!-- END CONTAINER -->
     </main>
 
