--- a/fraufeuer.html
+++ b/fraufeuer.html
@@ -41,7 +41,7 @@
     <main class="site-main">
         <section>
             <div class="full-width">
-                    <img src="img/fraufeuer_hero.jpg" alt="frau fuer powder blue product">
+                    <img src="img/fraufeuer_hero.jpg" alt="frau feuer powder blue product">
             </div>
         </section>
         <section>
@@ -61,13 +61,13 @@
 
                 <div class="row">
                     <div class="one-third oneone-img">
-                        <img src="img/placeholder1x1.png" alt="before">
+                        <img src="img/ff_sketch.png" alt="before">
                     </div>
                     <div class="one-third oneone-img">
-                        <img src="img/ff_sketch.png" alt="middle">
+                        <img src="img/ff_graphics.png" alt="middle">
                     </div>
                     <div class="one-third oneone-img">
-                        <img src="img/placeholder1x1.png" alt="after">
+                        <img src="img/ff_patterns.jpg" alt="after">
                     </div>
                 </div>
             </div>
