--- a/secondstar.html
+++ b/secondstar.html
@@ -48,16 +48,16 @@
                         <p>A dreamscape book of songs and memories, this album is a fictional project that plays on the concept of "neverland."</p>
                     </div>
                     <div class="one-half">
-                        <img src="img/placeholder1x1.png" alt="">
+                        <img src="img/ss_cover.jpg" alt="Second Star Page 1" width="555">
                     </div>
                     
                 </div>
                 <div class="row">
                     <div class="one-half">
-                        <img src="img/placeholder1x1.png" alt="">
+                        <img src="img/ss_lyt.jpg" alt="Second Star Love You Twice Song Cover" width="555">
                     </div>
                     <div class="one-half">
-                        <img src="img/placeholder1x1.png" alt="">
+                        <img src="img/ss_lyt_lyrics.jpg" alt=" Second Star Love You Twice Lyrics" width="555">
                     </div>
                 </div>
                 <div class="row">
@@ -65,7 +65,7 @@
                         <p>Follow the Second Star to Neverland. A place where all the “lost kids” can call home, a place where time moves slower than the rest, a place where we can escape from reality. LIFELINE is about the time spent together and accepting that one day we’ll all grow up and part ways, but remember the highs and lows of our youth.</p>
                     </div>
                     <div class="one-half">
-                        <img src="img/placeholder1x1.png" alt="">
+                        <img src="img/ss_dejavu.jpg" alt="Second Star deja vu image pairing" width="555">
                     </div>
                 </div>
 
