changed header moblie hover color and selected state, spacing, background

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="selected"><a href="about.html">About</a></li>
                 <li><a href="works.html">Works</a></li>
             </ul>
         </nav>
@@ -82,7 +82,7 @@
 
         <section class="about-animation">
             <div>
-                <video src="img/about_create.mp4" autoplay muted width="1520"></video>
+                <video src="img/about_create.mp4" autoplay muted loop width="1520"></video>
             </div>
         </section>
 
