--- a/ohwhaleco.html
+++ b/ohwhaleco.html
@@ -57,7 +57,7 @@
                         <img src="img/ohwhale_figma_r1.jpg" alt="ohwhale_figma_r1" width="555">
                     </div>
                     <div class="one-half">
-                        <img src="img/ohwhale_figma_r2_3.jpg" alt="ohwhale_figma_r2_3" width="555">
+                        <img src="img/ohwhale_figma_r2_3.jpg" alt="ohwhale_figma_r2_3">
                     </div>
                 </div>
                 <div class="row">
@@ -67,7 +67,7 @@
                         <p><a class="alt button" href="https://takyyttik.github.io/ohwhaleco/" target="#">Check out the live site</a></p>
                     </div>
                     <div class="one-half">
-                        <img src="img/ohwhale_original.jpg" alt="ohwhale_upcoming_page" width="555">
+                        <img src="img/ohwhale_original.jpg" alt="ohwhale_upcoming_page">
                     </div>
                 </div>
 
