--- a/works.html
+++ b/works.html
@@ -32,7 +32,7 @@
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="works.html">Works</a></li>
+                <li class="selected"><a href="works.html">Works</a></li>
             </ul>
         </nav>
     </header>
