--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
-                <li><a href="index.html">Home</a></li>
+                <li class="selected"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="works.html">Works</a></li>
             </ul>
@@ -73,20 +73,20 @@
             </div>
         </section>
 
-        <section>
+        <section class="home-works">
             <div class="container">
                 <div class="row">
-                    <div class="one-fourth column oneone-img"><a href="fraufeuer.html"><img src="img/fraufeuer_sage.jpg" alt="frau feuer branding design"></a>
+                    <div class="one-fourth column oneone-img"><a href="fraufeuer.html"><img src="img/fraufeuer_sage.jpg" alt="frau feuer branding design" width="700" height="700"></a>
                     </div>
 
-                    <div class="one-fourth column oneone-img"><a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Fictional pop group, Second Star, album design"></a>
+                    <div class="one-fourth column oneone-img"><a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Fictional pop group, Second Star, album design" width="700" height="700"></a>
                     </div>
 
                     <div class="one-fourth column oneone-img">
-                    <a href="flowerknows.html"><img src="img/flowerknows_box_mockup.png" alt="flower knows logo redesign"></a>
+                    <a href="flowerknows.html"><img src="img/flowerknows_box_mockup.png" alt="flower knows logo redesign" width="700" height="700"></a>
                     </div>
 
-                    <div class="one-fourth column oneone-img"><a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhale.co website redesign"></a>
+                    <div class="one-fourth column oneone-img"><a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhale.co website redesign" width="700" height="700"></a>
                     </div>
 
                 </div>
