adjusted spacing on case study pages

--- a/secondstar.html
+++ b/secondstar.html
@@ -62,7 +62,8 @@
                 </div>
                 <div class="row">
                     <div class="one-half">
-                        <p>Follow the Second Star to Neverland. A place where all the “lost kids” can call home, a place where time moves slower than the rest, a place where we can escape from reality. LIFELINE is about the time spent together and accepting that one day we’ll all grow up and part ways, but remember the highs and lows of our youth.</p>
+                        <h2>Follow the Second Star to Neverland</h2>
+                        <p>A place where all the “lost kids” can call home, a place where time moves slower than the rest, a place where we can escape from reality. LIFELINE is about the time spent together and accepting that one day we’ll all grow up and part ways, but remember the highs and lows of our youth.</p>
                     </div>
                     <div class="one-half">
                         <img src="img/ss_dejavu.jpg" alt="Second Star deja vu image pairing" width="555">
@@ -93,9 +94,9 @@
                 <div class="column col-2 push-5">
                     <h3><span class="chinese">加油~</span></h3>
                     <div class="link-icons">
-                        <p><a class="mail" href="mailto:katheren@hawaii.edu"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
+                        <p><a class="mail" href="mailto:katheren@hawaii.edu" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
 
-                        <a class="instagram" href="https://www.instagram.com/takyyttik/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
+                        <a class="instagram" href="https://www.instagram.com/takyyttik/" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
                     </div>
                 </div>
                 <div class="column col-1 push-8 rotate-vert-n">
