new index page, updated email on footer

--- a/index.html
+++ b/index.html
@@ -43,29 +43,71 @@
         
         <section class="hero">
             <div class="container">
-                <!-- <h1><i>From mind to matter</i></h1>
-                <h2 class="text-centered"><i>Design together</i></h2> -->
-                <h1><i>Design Together</i></h1>
-                    <p><a class="button" href="works.html">Creations</a>
+                <h3>Hey there, my name is</h3>
+                <h1 class="h1-left">Katheren</h1>
+                <p>
+                    <img src="img/lam_hero.png" alt="lamb hero holder">
+                </p>
+                <p>
+                    <a class="button" href="works.html">My Creations</a>
                     <a href="about.html" class="button">The Designer</a>
-                </p>        
+                </p>
+                <h1 class="h1-right">Lam</h1>        
+            </div>
+        </section>
+
+        <section class="home-works">
+            <div class="container">
+                <div class="row">
+                    <div class="one-fourth column oneone-img">
+                        <a href="fraufeuer.html"><img src="img/fraufeuer_sage.jpg" alt="frau feuer branding design" width="700" height="700">
+                        </a>
+                        <div class="project-details">
+                            <h3>Frau Feuer</h3>
+                            <p>#Branding</p>
+                        </div>
+                    </div>
+
+                    <div class="one-fourth column oneone-img"><a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Fictional pop group, Second Star, album design" width="700" height="700"></a>
+                        <div class="project-details">
+                            <h3>Second Star</h3>
+                            <p>#Branding #Layout</p>
+                        </div>
+                    </div>
+
+                    <div class="one-fourth column oneone-img">
+                    <a href="flowerknows.html"><img src="img/flowerknows_box_mockup.png" alt="flower knows logo redesign" width="700" height="700"></a>
+                    <div class="project-details">
+                        <h3>Flower Knows</h3>
+                        <p>#Redesign #Logo</p>
+                    </div>
+                    </div>
+
+                    <div class="one-fourth column oneone-img"><a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhale.co website redesign" width="700" height="700"></a>
+                        <div class="project-details">
+                            <h3>ohwhwale.co</h3>
+                            <p>#Redesign #Layout</p>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </section>
 
         <section class="landing">
             <div class="container">
-                <div class="row">
-                    <div class="one-third column">
+                <div class="row centered">
+                    <div class="one-third column push-1">
                         <img src="img/katheren_profile.jpg" alt="Profile Picture">
-                    </div>
-                    <div class="one-half column">
-                        <h2>大家好！ </h2>
+                    </div>  
+                    <div class="column col-6 push-6">
+                        <h2 class="rotate-vert-n">大家好！ </h2>
                         <p>My name is Katheren Jia-Li Lam. <span class="chinese">嘉</span> (Jia) meaning auspicious, <span class="chinese">麗</span> (Li) meaning beauty, and <span class="chinese">林</span> (Lam, also read as Lin or Lum) meaning forest.</p>
                         <p>I am a creator who’s learning wherever life takes me. I started my design career in 2022 at Kapiʻolani Community College after studying Business for 2 years.</p>
                         <p>When I’m not working, I enjoy playing video games, crafting, and cooking!</p>
 
                         <h3>Contact</h3>
-                        <p>Email: <a href="mailto:katheren@hawaii.edu">katheren@hawaii.edu</a></p>
+                        <p>Email: <a href="mailto:katheren792@gmail.com">katheren792@gmail.com</a></p>
                         <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
                     </div>
                 </div>
@@ -73,25 +115,7 @@
             </div>
         </section>
 
-        <section class="home-works">
-            <div class="container">
-                <div class="row">
-                    <div class="one-fourth column oneone-img"><a href="fraufeuer.html"><img src="img/fraufeuer_sage.jpg" alt="frau feuer branding design" width="700" height="700"></a>
-                    </div>
-
-                    <div class="one-fourth column oneone-img"><a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Fictional pop group, Second Star, album design" width="700" height="700"></a>
-                    </div>
-
-                    <div class="one-fourth column oneone-img">
-                    <a href="flowerknows.html"><img src="img/flowerknows_box_mockup.png" alt="flower knows logo redesign" width="700" height="700"></a>
-                    </div>
-
-                    <div class="one-fourth column oneone-img"><a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhale.co website redesign" width="700" height="700"></a>
-                    </div>
-
-                </div>
-            </div>
-        </section>
+        
 
 
     </main>
@@ -116,7 +140,7 @@
                 <div class="column col-2 push-5">
                     <h3><span class="chinese">加油~</span></h3>
                     <div class="link-icons">
-                        <p><a class="mail" href="mailto:katheren@hawaii.edu" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
+                        <p><a class="mail" href="mailto:katheren792@gmail.com" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
 
                         <a class="instagram" href="https://www.instagram.com/takyyttik/" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
                     </div>
