--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                         <p>A creative designer who seeks to learn more about the field of design and experiment with different visual styles. Specializes in flat 2D design, layouts, organization, and providing a different point of view. </p>
                         
                         <h3>Say Hi!</h3>
-                        <p>Email: <a href="mailto:katheren@hawaii.edu">katheren@hawaii.edu</a></p>
+                        <p>Email: <a href="mailto:katheren792@gmail.com">katheren792@gmail.com</a></p>
                         <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
                         </ul>
                     </div>
@@ -164,7 +164,7 @@
                 <div class="column col-2 push-5">
                     <h3><span class="chinese">加油~</span></h3>
                     <div class="link-icons">
-                        <p><a class="mail" href="mailto:katheren@hawaii.edu" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
+                        <p><a class="mail" href="mailto:katheren792@gmail.com" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
 
                         <a class="instagram" href="https://www.instagram.com/takyyttik/" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
                     </div>
