--- a/index_v1.html
+++ b/index_v1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | About</title>
+    <title>Portfolio | Home</title>
 
 <!-- MAIN CSS FILE -->
     <link rel="stylesheet" href="css/style.css">
@@ -19,68 +19,81 @@
         })(document);
       </script>
 
+
 </head>
 
 
-<body>
-    <header class="site-header toggle-nav animated">
+<body class="home-page">
+    <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
             <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
         </div>
+
         <nav class="site-navigation">
             <button class="menu-button navicon">Menu</button>
             <ul class="nav">
-                <li><a href="index.html">Home</a></li>
+                <li class="selected"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li class="selected"><a href="works.html">Works</a></li>
+                <li><a href="works.html">Works</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="site-main works">
-        <section>
-            <div class="row">
-                <div class="one-half">
-                    <div class="grow">
-                        <a href="fraufeuer.html"><img src="img/fraufeuer.jpg" alt="Frau Feuer Product Design"></a>
-                    </div>
-                </div>
-                <div class="one-half">
-                    <div class="grow">
-                        <a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Second Star Album Design"></a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section>
-            <div class="row">
-                <div class="one-half">
-                    <div class="grow">
-                        <a href="flowerknows.html"><img src="img/FlowerKnows_BoxnBlush_Mockup.png" alt="flower knows corporate logo"></a>
-                    </div>
-                </div>
-                <div class="one-half">
-                    <div class="grow">
-                        <a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhaledotco"></a>
-                    </div>
-                </div>
-            </div>
-        </section>
+    <main class="site-main">
         
-        <!-- <section>
-            <div class="row">
-                <div class="one-half">
-                    <div class="grow">
-                        <a href="kawaiikon.html"><img src="img/kk_logo.png" alt="placeholder"></a>
+        <section class="hero">
+            <div class="container">
+                <!-- <h1><i>From mind to matter</i></h1>
+                <h2 class="text-centered"><i>Design together</i></h2> -->
+                <h1><i>Design Together</i></h1>
+                    <p><a class="button" href="works.html">Creations</a>
+                    <a href="about.html" class="button">The Designer</a>
+                </p>        
+            </div>
+        </section>
+
+        <section class="landing">
+            <div class="container">
+                <div class="row">
+                    <div class="one-third column">
+                        <img src="img/katheren_profile.jpg" alt="Profile Picture">
+                    </div>
+                    <div class="one-half column">
+                        <h2>大家好！ </h2>
+                        <p>My name is Katheren Jia-Li Lam. <span class="chinese">嘉</span> (Jia) meaning auspicious, <span class="chinese">麗</span> (Li) meaning beauty, and <span class="chinese">林</span> (Lam, also read as Lin or Lum) meaning forest.</p>
+                        <p>I am a creator who’s learning wherever life takes me. I started my design career in 2022 at Kapiʻolani Community College after studying Business for 2 years.</p>
+                        <p>When I’m not working, I enjoy playing video games, crafting, and cooking!</p>
+
+                        <h3>Contact</h3>
+                        <p>Email: <a href="mailto:katheren@hawaii.edu">katheren@hawaii.edu</a></p>
+                        <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
                     </div>
                 </div>
-                <div class="one-half">
-                    <div class="grow">
-                        <a href="cologne.html"><img src="img/cologne_display.png" alt="placeholder"></a>
+
+            </div>
+        </section>
+
+        <section class="home-works">
+            <div class="container">
+                <div class="row">
+                    <div class="one-fourth column oneone-img"><a href="fraufeuer.html"><img src="img/fraufeuer_sage.jpg" alt="frau feuer branding design" width="700" height="700"></a>
                     </div>
+
+                    <div class="one-fourth column oneone-img"><a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Fictional pop group, Second Star, album design" width="700" height="700"></a>
+                    </div>
+
+                    <div class="one-fourth column oneone-img">
+                    <a href="flowerknows.html"><img src="img/flowerknows_box_mockup.png" alt="flower knows logo redesign" width="700" height="700"></a>
+                    </div>
+
+                    <div class="one-fourth column oneone-img"><a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhale.co website redesign" width="700" height="700"></a>
+                    </div>
+
                 </div>
             </div>
-        </section> -->
+        </section>
+
+
     </main>
 
     <footer class="site-footer">
@@ -103,13 +116,13 @@
                 <div class="column col-2 push-5">
                     <h3><span class="chinese">加油~</span></h3>
                     <div class="link-icons">
-                        <p><a class="mail" href="mailto:katheren792@gmail.com" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
+                        <p><a class="mail" href="mailto:katheren@hawaii.edu" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg></a>
 
                         <a class="instagram" href="https://www.instagram.com/takyyttik/" target="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4c4646" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a></p>
                     </div>
                 </div>
                 <div class="column col-1 push-8 rotate-vert-n">
-                    <h5 class="rotate-vert">MY PROJECTS</h5>
+                    <h5><a href="works.html">MY PROJECTS</a></h5>
                 </div>
                 <div class="column col-2 push-9 no-deco">
                     <ul>
