remove color in index and update files in secondstar

--- a/secondstar.html
+++ b/secondstar.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body class="case-study-block">
+<body class="secondstar">
     <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
             <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
@@ -40,28 +40,47 @@
     </header>
 
     <main class="site-main">
+        <section class="full-width">
+            <div>
+                <img src="img/ss_cover.jpg" alt="second star image wrap cover" width="1600">
+            </div>
+        </section>
         <section>
             <div class="container">
                 <div class="row swapped">
                     <div class="one-half">
-                        <h2>The meaning of "nostolgia?"</h2>
+                        <h2>The meaning of "nostolgia"</h2>
                         <p>A dreamscape book of songs and memories, this album is a fictional project that plays on the concept of "neverland."</p>
+                        <p><a class="button" href="https://open.spotify.com/playlist/6Tib5bM7ISMJzzjBbuAq3Z?si=d9e6945dea054beb">Listen along</a></p>
                     </div>
                     <div class="one-half">
                         <img src="img/ss_cover.jpg" alt="Second Star Page 1" width="555">
                     </div>
-                    
                 </div>
+
                 <div class="row">
-                    <div class="one-half">
-                        <img src="img/ss_lyt.jpg" alt="Second Star Love You Twice Song Cover" width="555">
+                    <div class="one-third column">
+                        <img src="img/ss_logo_v1.jpg" alt="">
+                        <h3 class="">"Dreamscape"</h3>
                     </div>
-                    <div class="one-half">
-                        <img src="img/ss_lyt_lyrics.jpg" alt=" Second Star Love You Twice Lyrics" width="555">
+                    <div class="one-third column">
+                        <img src="img/ss_logo_v2.jpg" alt="">
+                        <h3>"Connection"</h3>
+                    </div>
+                    <div class="one-third column">
+                        <img src="img/ss_logo.jpg" alt="">
+                        <h3>"Time"</h3>
                     </div>
                 </div>
+                
                 <div class="row">
-                    <div class="one-half">
+                    <div class="one-half centered column">
+                        <img src="img/ss_forever_pages.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="one-half column">
                         <h2>Follow the Second Star to Neverland</h2>
                         <p>A place where all the “lost kids” can call home, a place where time moves slower than the rest, a place where we can escape from reality. LIFELINE is about the time spent together and accepting that one day we’ll all grow up and part ways, but remember the highs and lows of our youth.</p>
                     </div>
