--- a/about.html
+++ b/about.html
@@ -70,12 +70,22 @@
                     </div>
                     <div class="two-thirds column">
                         <h2>Katheren [kat-ther-ren] (n.)</h2>
-                        <p>A creative designer who seeks to learn more about the field of design and experiment with different visual styles. Specializes in flat 2D design, layouts, organization, and providing a different point of view. </p>
+                        <p>A creative designer who seeks to learn more about the field of design <br>and experiment with different visual styles. Specializes in 2D design, <br>layouts, organization, and providing a different point of view. </p>
+
+                        <div class="row">
+                            <div class="one-half column intro-software">
+                                <img  src="img/adobe_cloud.png" alt="adobe cloud" width="100" height="100">
+                                <img  src="img/vscode.png" alt="visual studio code" width="100" height="100">
+                                <img  src="img/figma.png" alt="figma" width="100" height="100">
+                            </div>
+                            <div class="one-half collumn push-7 intro-contact">
+                                <h3>Let's chat!</h3>
+                                <p><a href="mailto:katheren792@gmail.com">katheren792@gmail.com</a></p>
+                                <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
+                                </ul>
+                            </div>
+                        </div>
                         
-                        <h3>Say Hi!</h3>
-                        <p>Email: <a href="mailto:katheren792@gmail.com">katheren792@gmail.com</a></p>
-                        <p><a class="button" href="https://drive.google.com/file/d/1qKnmNC08R06--_im8tLK4datLahe3G0B/view" target="#">Check Out My Resume</a></p>
-                        </ul>
                     </div>
             </section>
         </div>
