--- a/secondstar.html
+++ b/secondstar.html
@@ -42,7 +42,7 @@
     <main class="site-main">
         <section class="full-width">
             <div>
-                <img src="img/ss_cover.jpg" alt="second star image wrap cover" width="1600">
+                <img src="img/secondstar_mockup.jpg" alt="second star image wrap cover" width="1600">
             </div>
         </section>
         <section>
