Hero change, adding in content to case study pages, testing playlist for secondstar page

--- a/about.html
+++ b/about.html
@@ -92,7 +92,15 @@
 
         <section class="about-animation">
             <div>
-                <video src="img/about_create.mp4" autoplay muted loop width="1520"></video>
+                <div class="title-animate">
+                    <h2>Designer</h2>
+                    <h2>UI/UX Developer</h2>
+                    <h2>Video Editor</h2>
+                    <h2>Photographer</h2>
+                    <h2>Illustrator</h2>
+                    <h2>Creator</h2>
+                </div>
+                <!-- <video src="img/about_create.mp4" autoplay muted loop width="1520"></video> -->
             </div>
         </section>
 
