--- a/fraufeuer.html
+++ b/fraufeuer.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body class="case-study-card">
+<body class="fraufeuer-casestudy">
     <header class="site-header toggle-nav animated on-top">
         <div class="site-id">
             <h1><a href="index.html"><img src="img/lam_logo.png" alt="katheren logo" width="80" height="80"></a></h1>
@@ -46,30 +46,23 @@
         </section>
         <section>
             <div class="container">
-                <h2>Frau Feuer</h2>
-                <h3>One "Miss Fire" that always hits</h3>
-
                 <div class="row">
-                    <div class="one-half">
+                    <div class="two-thirds column">
+                        <h2>Frau Feuer</h2>
+                        <h3>One "Miss Fire" that always hits</h3>
                         <p>The name Frau Feuer is a play on words; directly translated from German, “Frau” is how one may refer to a woman “Miss,” while “Feuer” is the word for “Fire.” When put together it becomes “Miss Fire,” a character standing as a figure of guidance, like a coach.</p>
-                        <p>When figuring out what the logo should look like, I explored ideas of fire, targets, shooting pellets, rifles, and logo types. Ultimately, I landed on a stylized flame with semi circle eyes to represent the shape of safety glasses. This character is set in black and white to be a neutral point that can complement the color coded packaging.</p>
                     </div>
-                    <div class="one-half">
-                        <p>This was my first time creating packaging from start to finish. The shape of the packaging evolved from rectangular to hexagonal, and included an insert to ease the reachability of the tins at the bottom of the package. It can easily be stored upright or horizontally. The biggest point of consideration in the design process was user experience and the struggles I have encountered in the past with Air Riflery pellet packaging.</p>
-                    </div>
-                </div>
-
-                <div class="row three-imgs">
-                    <div class="one-third oneone-img">
-                        <img src="img/ff_sketch.png" alt="before">
-                    </div>
-                    <div class="one-third oneone-img">
-                        <img src="img/ff_graphics.png" alt="middle">
-                    </div>
-                    <div class="one-third oneone-img">
-                        <img src="img/ff_patterns.jpg" alt="after">
+                    <div class="col-3 push-9">
+                        <div class="logo">
+                            <img src="img/ff_logo.png" alt="frau feuer logo">
+                        </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <img src="img/ff_sketches_v1.jpg" alt="sketches and digitization">
             </div>
         </section>
         <section>
