--- a/works.html
+++ b/works.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="one-half">
                     <div class="grow">
-                        <a href="secondstar.html"><img src="img/ss_placeholder.png" alt="Second Star Album Design"></a>
+                        <a href="secondstar.html"><img src="img/ss_mockup.jpg" alt="Second Star Album Design"></a>
                     </div>
                 </div>
             </div>
@@ -64,6 +64,11 @@
                         <a href="ohwhaleco.html"><img src="img/ohwhaledotco_display.png" alt="ohwhaledotco"></a>
                     </div>
                 </div>
+                <!-- <div class="one-half">
+                    <div class="grow">
+                        <a href="cologne.html"><img src="" alt="cologne tourism logo"></a>
+                    </div>
+                </div> -->
             </div>
         </section>
         
