second star working playlist added

--- a/secondstar.html
+++ b/secondstar.html
@@ -139,7 +139,7 @@
                                                 <p>You Would</p>
                                                 <p>JHIN</p>
                                             </div>
-                                            <p>3:43</p>
+                                            <p>3:42</p>
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
@@ -148,7 +148,7 @@
                                                 <p>alright</p>
                                                 <p>raph</p>
                                             </div>
-                                            <p>2:13</p>
+                                            <p>2:12</p>
                                             <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
@@ -158,7 +158,7 @@
                                                 <p>Huh Yunjin</p>
                                             </div>
                                             <p>2:52</p>
-                                            <i class="fa-solid fa-heart like-btn"></i>
+                                            <i class="fa-regular fa-heart like-btn"></i>
                                         </div>
                                         <div class="playlist-item">
                                             <img src="https://placehold.co/600x400" alt="placeholder">
