added content to second star page, adjusted graphics for hero

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="one-half column">
                         <div class="hero-lam-logo">
-                            <p><img src="img/lam_hero.png" alt="lamb hero holder"></p>
+                            <p><img src="img/jumping_lam.png" alt="lamb hero holder"></p>
                         </div>
                         
                     </div> 
