assets added for SS and FF

--- a/ohwhaleco.html
+++ b/ohwhaleco.html
@@ -41,6 +41,11 @@
 
     <main class="site-main">
         <section>
+            <div class="full-width">
+                    <img src="img/fraufeuer_hero.jpg" alt="frau feuer powder blue product">
+            </div>
+        </section>
+        <section>
             <div class="container">
                 <div class="row swapped">
                     <div class="one-half">
@@ -57,6 +62,7 @@
                         <img src="img/ohwhale_figma_r1.jpg" alt="ohwhale_figma_r1" width="555">
                     </div>
                     <div class="one-half">
+                        <h2> </h2>
                         <img src="img/ohwhale_figma_r2_3.jpg" alt="ohwhale_figma_r2_3">
                     </div>
                 </div>
