updated ohwhaleco and flower knows case study pages to match style

--- a/secondstar.html
+++ b/secondstar.html
@@ -47,14 +47,15 @@
     <main class="site-main">
         <section class="full-width">
             <div>
-                <img src="img/ss_mockup.jpg" alt="second star image wrap cover" width="1600">
+                <img src="img/ss_mockup.jpg" alt="second star image wrap cover" style="width: 100%; height: 40em; object-fit: cover;">
             </div>
         </section>
         <section>
             <div class="container">
                 <div class="row">
                     <div class="one-half">
-                        <h2>The meaning of "nostolgia"</h2>
+                        <h2>Second Star &mdash; LIFELINE</h2>
+                        <h3>The meaning of "nostolgia"</h3>
                         <p>A dreamscape book of songs and memories, this album is a fictional project that plays on the concept of "neverland."</p>
                         <div class="listen-button">
                             <p><a class="button" href="#ss-audioplayer">Listen along</a></p>
