updated contents on ohwhale co and flower knows

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="two-thirds column">
                         <h2>Katheren [kat-ther-ren] (n.)</h2>
-                        <p>A creative designer who seeks to learn more about the field of design <br>and experiment with different visual styles. Specializes in 2D design, <br>layouts, organization, and providing a different point of view. </p>
+                        <p>A multidisciplinary designer who specializes in 2D design and layout. An out of the box who provides a different point of view. Enjoys hands on learning <br>and bringing creative projects to life.</p>
 
                         <div class="row">
                             <div class="one-half column intro-software">
