--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
                     <div class="column col-6 push-6">
                         <h2 class="rotate-vert-n">大家好！ </h2>
                         <p>My name is Katheren Jia-Li Lam. <span class="chinese">嘉</span> (Jia) meaning auspicious, <span class="chinese">麗</span> (Li) meaning beauty, and <span class="chinese">林</span> (Lam, also read as Lin or Lum) meaning forest.</p>
+                        <p>A creative who started out in Business before deciding they wanted to dive deeper into the world of design.</p>
+
                         <p>I am a creator who’s learning wherever life takes me. I started my design career in 2022 at Kapiʻolani Community College after studying Business for 2 years.</p>
                         <p>When I’m not working, I enjoy playing video games, crafting, and cooking!</p>
 
